[package]
name = "helium-co2-monitor"
version = "0.1.0"
edition = "2021"
authors = ["Abinayan Sureskumar"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"